<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<ListPreference android:key="picture_source"
		android:layout="?android:attr/preferenceLayoutChild"
		android:title="@string/bc_choose_picture_source_text"
		android:entries="@array/bc_picture_source_entries"
		android:entryValues="@array/bc_picture_source_entry_values"
		android:dialogTitle="@string/bc_choose_picture_source_text"
		android:defaultValue="0" />

	<CheckBoxPreference android:key="ring_hourly" 
		android:title="@string/bc_ring_on_hour_title_text"
		android:summary="@string/bc_ring_on_hour_summary_text"
		android:defaultValue="false" />

	<CheckBoxPreference android:key="fetch_screen_off" 
		android:title="@string/bc_fetch_when_screen_off_title_text"
		android:summary="@string/bc_fetch_when_screen_off_summary_text"
		android:defaultValue="true" />
		
</PreferenceScreen>
